--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cross-env": "^7.0.3",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "moment": "^2.29.4",
     "mongoose": "^7.5.1",
     "morgan": "^1.10.0"
   }
