--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.5.1",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "dotenv": "^16.3.1",
@@ -20,8 +22,6 @@
     "helmet": "^7.0.0",
     "moment": "^2.29.4",
     "mongoose": "^7.5.1",
-    "morgan": "^1.10.0",
-    "passport": "^0.6.0",
-    "passport-google-oauth20": "^2.0.0"
+    "morgan": "^1.10.0"
   }
 }
