--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start-dev": "cross-env NODE_ENV=development nodemon app.js",
-    "start-prod": "cross-env NODE_ENV=production nodemon app.js"
+    "start-prod": "cross-env NODE_ENV=production nodemon app.js",
+    "start": "node app.js"
   },
   "keywords": [],
   "author": "",
